# inkscope-fuzzer

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.yaml  example-config.yaml  patch
.docker/inkscope-fuzzer/: Dockerfile
.docker/testing/: Dockerfile
.github/workflows/: ci.yml  lint.yml  mdbook.yml  tests.yml
book/: book.toml
book/src/: SUMMARY.md  executing.md  installation.md  introduction.md  ityfuzz.md  overview.md  writing-properties.md
docs/: write-properties.md
flipper/: Cargo.toml  lib.rs
scripts/: build-test-contracts.sh
src/: arguments.rs  cli.rs  config.rs  constants.rs  contract_bundle.rs  engine.rs  ext.rs  ext_env.rs  flags.rs  flipper.rs  flipper.wat  fuzzer.rs  generator.rs  info.rs  main.rs  setup.rs  tui.rs  types.rs  wasm_analyzer.rs
src/output/: console.rs  mod.rs  output.rs  utils.rs
src/output/tui/: app.rs  mod.rs  terminal.rs  ui.rs
src/tests/: fuzz_flipper.rs  ityfuzz.rs  mod.rs  primitive_generator.rs  test.rs
src/tui/: app.rs  mod.rs  terminal.rs  ui.rs
src/utils/: types.rs
src/wasm/: executor.rs  host_functions.rs  host_state.rs  mod.rs  module.rs
test-contracts/: Makefile  build.py  build.sh  clean.py
test-contracts/coinfabrik-test-contracts/: README.md
test-contracts/coinfabrik-test-contracts/assert-violation/remediated-example/: lib.rs
test-contracts/coinfabrik-test-contracts/assert-violation/vulnerable-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/integer-overflow-or-underflow-1/remediated-example/: lib.rs
test-contracts/coinfabrik-test-contracts/integer-overflow-or-underflow-1/vulnerable-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/integer-overflow-or-underflow-2/remediated-example/: lib.rs
test-contracts/coinfabrik-test-contracts/integer-overflow-or-underflow-2/vulnerable-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/iterators-over-indexing/remediated-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/iterators-over-indexing/vulnerable-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/zero-or-test-address/remediated-example/: Cargo.toml  lib.rs
test-contracts/coinfabrik-test-contracts/zero-or-test-address/vulnerable-example/: Cargo.toml  lib.rs
test-contracts/constructor-panics/: Cargo.toml  lib.rs
test-contracts/flipper/: Cargo.toml  lib.rs
test-contracts/ityfuzz/: Cargo.toml  lib.rs
test-contracts/message-panics/: Cargo.toml  lib.rs
test-contracts/primitive_generator_tester/: Cargo.toml  lib.rs
test-contracts/simple_flag/: Cargo.toml  lib.rs
