[package]
name = "inkscope-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
drink = { git = "https://github.com/inkscopexyz/inkscope-drink.git", branch = "main" }
fastrand = "2.0.1"
hex = "0.4.3"
log = "0.4.20"
rayon = "1.8.1"
anyhow = "1.0.80"
parity-scale-codec = "3.6.9"
scale-info = "2.10.0"
env_logger = "0.11.2"


ink_metadata = "5.0.0-rc.2"  # TODO remove and use the dep published in the drink crate
serde = "1.0.197"
serde_yaml = "0.9.33"
clap = { version="4.5", features = ["derive"] }
