[package]
name = "inkscope-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_sandbox = { git = "https://github.com/inkscopexyz/ink.git"}
contract-metadata = { version = "4.0.0-rc.2" }
contract-transcode = { version = "4.0.0-rc.2" }
fastrand = "2.0.1"
hex = "0.4.3"
log = "0.4.20"
rayon = "1.8.1"
anyhow = "1.0.80"
parity-scale-codec = "3.6.9"
scale-info = "2.10.0"
env_logger = "0.11.2"
ink_metadata = "5.0.0-rc.2"
serde = "1.0.197"
serde_yaml = "0.9.33"
clap = { version="4.5", features = ["derive"] }
tempfile = "3.10.1"
serde_json = "1.0.115"
ratatui = "0.26.2"
crossterm = "0.27.0"
