[package]
name = "zerocheck"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
fuzz-testing = []

[dependencies]
ink = { version = "=5.0.0-rc.1", default-features = false, features = [
    "ink-debug",
] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
